projects/plugins/jetpack/modules/carousel/jetpack-carousel.css
/* ... */
/* ----- Light variant ----- */

.jp-carousel-light .jp-carousel-overlay {
	background: #fff;
}

.jp-carousel-light .jp-carousel-next-button:hover span,
.jp-carousel-light .jp-carousel-previous-button:hover span {
	opacity: 0.8;
}

.jp-carousel-light .jp-carousel-close-hint:hover,
.jp-carousel-light .jp-carousel-titleanddesc div {
	color: #000 !important;
}

.jp-carousel-light .jp-carousel-comments p a,
.jp-carousel-light .jp-carousel-comment .comment-author a,
.jp-carousel-light .jp-carousel-titleanddesc p a,
.jp-carousel-light .jp-carousel-titleanddesc p a,
.jp-carousel-light .jp-carousel-comments p a,
.jp-carousel-light .jp-carousel-info h2 a {
	color: #4f94d4 !important;
}

.jp-carousel-light .jp-carousel-comments p a:hover,
.jp-carousel-light .jp-carousel-comment .comment-author a:hover,
.jp-carousel-light .jp-carousel-titleanddesc p a:hover,
.jp-carousel-light .jp-carousel-titleanddesc p a:hover,
.jp-carousel-light .jp-carousel-comments p a:hover,
.jp-carousel-light .jp-carousel-info h2 a:hover {
	color: #f1831e !important;
}

.jp-carousel-light .jp-carousel-info h2,
.jp-carousel-light .jp-carousel-titleanddesc,
.jp-carousel-light .jp-carousel-titleanddesc p,
.jp-carousel-light .jp-carousel-comment,
.jp-carousel-light .jp-carousel-comment p,
.jp-carousel-light div.jp-carousel-buttons a,
.jp-carousel-light .jp-carousel-titleanddesc p strong,
.jp-carousel-light .jp-carousel-titleanddesc p b,
.jp-carousel-light .jp-carousel-titleanddesc p em,
.jp-carousel-light .jp-carousel-titleanddesc p i {
	color: #646970;
}

.jp-carousel-light .jp-carousel-buttons {
	border-bottom-color: #f0f0f0;
	background: #f6f7f7;
}

.jp-carousel-light div.jp-carousel-buttons a:hover {
	text-decoration: none;
	color: #f1831e;
}

.jp-carousel-light div.jp-carousel-buttons a.jp-carousel-commentlink {
	background-position: 0px -176px;
}

.jp-carousel-light #jp-carousel-comment-form-button-submit {
	color: black;
	border: solid 1px black;
	background: #fbfbfb;
}

.jp-carousel-light .jp-carousel-image-meta {
	background: #f6f7f7;
	border: 1px solid #f0f0f1;
	border-top-color: #f6f7f7;
	border-left-color: #f6f7f7;
	color: #333;
}

.jp-carousel-light .jp-carousel-image-meta li {
	color: #000 !important;
}

.jp-carousel-light .jp-carousel-close-hint {
	color: #ccc;
}

.jp-carousel-light .jp-carousel-close-hint span {
	background-color: white;
	border-color: #ccc;
}

.jp-carousel-light #jp-carousel-comment-form-comment-field::-webkit-input-placeholder {
	color: #a7aaad;
}

.jp-carousel-light #jp-carousel-comment-form-comment-field:focus {
	color: #333;
}

.jp-carousel-light #jp-carousel-comment-form-comment-field:focus::-webkit-input-placeholder {
	color: #dcdcde;
}

.jp-carousel-light a.jp-carousel-image-download {
	background-position: 0 -122px;
}

.jp-carousel-light a.jp-carousel-image-download:hover {
	background-position: 0 -122px;
	color: #f1831e;
}

.jp-carousel-light textarea#jp-carousel-comment-form-comment-field {
	background: #fbfbfb;
	color: #333;
	border: 1px solid #dcdcde;
	-webkit-box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.1 );
	box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.1 );
}

.jp-carousel-light #jp-carousel-comment-form-commenting-as input {
	background: #fbfbfb;
	border: 1px solid #dcdcde;
	color: #333;
	-webkit-box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.1 );
	box-shadow: inset 2px 2px 2px rgba( 0, 0, 0, 0.1 );
}

.jp-carousel-light #jp-carousel-comment-form-commenting-as input:focus {
	background: #fbfbfb;
	color: #333;
}

.jp-carousel-light #jp-carousel-comment-post-results span {
	background: #f6f7f7;
	border: 1px solid #dcdcde;
	-webkit-box-shadow: inset 0px 0px 5px rgba( 0, 0, 0, 0.05 );
	box-shadow: inset 0px 0px 5px rgba( 0, 0, 0, 0.05 );
}

.jp-carousel-light .jp-carousel-slide {
	background-color: #fff;
}

.jp-carousel-light .jp-carousel-titleanddesc {
	border-top: 1px solid #f0f0f1;
}

.jp-carousel-light .jp-carousel-fadeaway {
	background: -moz-linear-gradient( bottom, rgba( 255, 255, 255, 0.75 ), rgba( 255, 255, 255, 0 ) );
	background: -webkit-gradient(
		linear,
		left bottom,
		left top,
		from( rgba( 255, 255, 255, 0.75 ) ),
		to( rgba( 255, 255, 255, 0 ) )
	);
}

.jp-carousel-light .jp-carousel-info {
	background-color: #fff;
}

.jp-carousel-light .jp-carousel-info-footer {
	background-color: #fff;
}

.jp-carousel-light .jp-carousel-info-extra {
	background-color: #fff;
}

.jp-carousel-light .jp-carousel-icon {
	color: #000;
	fill: #000;
	background-color: #fff;
}

.jp-carousel-light .jp-carousel-icon-btn:hover .jp-carousel-icon {
	color: #fff;
	fill: #fff;
	background-color: #000;
}

.jp-carousel-light .jp-carousel-pagination {
	color: #000;
}

/** Icons Start **/
.jp-carousel-photo-icons-container {
	display: block;
	text-align: right;
	margin-right: 16px;
}

.jp-carousel-icon-btn {
	padding: 8px 16px;
	text-decoration: none;
	border: none;
	background: none;
	display: inline-block;
	height: 48px;
}

.jp-carousel-icon {
	color: #fff;
	fill: #fff;
	background-color: #000;
	border: none;
	border-radius: 2px;
	cursor: pointer;
	font-family: dashicons;
	display: inline-block;
	width: 32px;
	height: 32px;
	font-size: 30px;
	line-height: 1;
	font-weight: 400;
	font-style: normal;

}

.jp-carousel-icon-btn:hover .jp-carousel-icon {
	color: #000;
	fill: #000;
	background-color: #fff;
}

.jp-carousel-icon-comments.jp-carousel-show {
	display: inline-block;
}
/* ... */

